dropdown overflow fix

--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -1,12 +1,3 @@
-.selection {
-  z-index: 100;
-}
-
-.datatable {
-  z-index: 1;
-  overflow: visible;
-}
-
 .table {
   width: 100%;
   box-sizing: content-box;
